# -AgentEvalKit

./: .env.example  .gitignore  AGENTS.md  BUG_LOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_MAP.md  RAG技术详解.md  README.md  SECURITY.md  config.py  main.py  pyproject.toml  requirements.txt  start_backend_stable.ps1  start_frontend.ps1  streamlit_app.py  项目维护手册.md
.github/: pull_request_template.md
docs/: AGENT_GUIDE.md  DEMO_PACKAGE.md  GLOSSARY.md  INTERVIEW_GUIDE.md  KNOWN_ISSUES.md  OPEN_SOURCE_CHECKLIST.md  PROJECT_WALKTHROUGH.md  SAMPLE_DATA.md
eval/: agent_eval.py  agent_eval_cases.json  eval_cases.json  rag_eval.py
rag/: __init__.py  agent.py  api_client.py  document_loader.py  logging_utils.py  multimodal.py  qa_chain.py  reranker.py  session_state.py  text_splitter.py  tools.py  upload_validation.py  vector_store.py
scripts/: check_backend_release.py
tests/: conftest.py  test_agent_debug.py  test_agent_eval.py  test_api_client.py  test_backend_rag_loop.py  test_backend_release_check.py  test_config.py  test_document_loader.py  test_eval.py  test_frontend_ui_contracts.py  test_logging_utils.py  test_main.py  test_main_endpoints.py  test_maintenance_smoke.py  test_multimodal.py  test_qa_chain.py  test_reranker.py  test_session_state.py  test_text_splitter.py  test_tools_tavily.py  test_upload_validation_extended.py  test_vector_store.py  test_vector_store_rename.py
ui/: __init__.py  api_wrappers.py  assets.py  chat.py  components.py  export.py  icons.py  js_injection.py  marketing.py  pages.py  session_ui.py  sidebar.py  (+2 more)
(+37 files in other folders)
