[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "personal-rag-assistant"
version = "1.0.0"
description = "基于 LangChain 和 Chroma 的个人知识库问答系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.35.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-classic>=1.0.0",
    "langgraph>=0.2.0",
    "rank-bm25>=0.2.2",
    "chromadb>=0.5.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    "markdown>=3.6.0",
    "Pillow>=10.0.0",
    "requests>=2.32.0",
    "charset-normalizer>=3.3.0",
    "chardet>=5.2.0",
    "httpx>=0.27.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["rag*", "ui*", "config*"]
